--- a/base-example.ipynb
+++ b/base-example.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "75d43113-cec9-4421-8f87-0d65341b5262",
    "metadata": {},
    "outputs": [],
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "f293e2a6-8207-45e5-ae3d-919fb6794de8",
    "metadata": {},
    "outputs": [],
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "44622043-1819-499b-ba72-3ee98c9127f4",
    "metadata": {},
    "outputs": [
@@ -82,7 +82,18 @@
        "\u001b[0;34m\u001b[0m    \u001b[0mstart_size\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m50\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
        "\u001b[0;34m\u001b[0m    \u001b[0midx_start\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
        "\u001b[0;34m\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-       "\u001b[0;31mDocstring:\u001b[0m <no docstring>\n",
+       "\u001b[0;31mDocstring:\u001b[0m\n",
+       "Runs an active learning experiment and returns a list of results for a single run. \n",
+       "\n",
+       "Arguments:\n",
+       "    - name: the name for the experiment\n",
+       "    - data: the (X, y) data pair\n",
+       "    - estimator: the ML model to use\n",
+       "    - strategy: a modAL compatible selection function\n",
+       "    - batch_size: size of each labelling batch\n",
+       "    - n_batch: number of batches to run\n",
+       "    - start_size: if no `idx_start` are passed, how big the starting batch should be\n",
+       "    - idx_start: manually passed indices of the starting batch\n",
        "\u001b[0;31mFile:\u001b[0m      ~/Development/scikit-teach/skteach.py\n",
        "\u001b[0;31mType:\u001b[0m      function\n"
       ]
